--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -1,9 +1,10 @@
 name: CI PipeLine
 
 on:
-  push: branches:[ main ]
+  push:
+    branches: [main]
 
-job:
+jobs:
   build:
     runs-on: ubuntu-latest
 
@@ -13,7 +14,8 @@ job:
 
     - name: Setup nodejs
       uses: actions/setup-node@v3
-      with: node-version-16
+      with:
+        node-version: 16
 
     - name: Install dependencies
       run: npm ci
